--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         </div>
     </div>
 
+    <!-- Pocket Bird Embed -->
+    <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script>
+
     <script src="script.js"></script>
 </body>
 </html>
