--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
             <a href="notes.html">Go to Notes Page</a>
         </div>
     </div>
+    
+    <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script> <!-- Pocket Bird -->
 </body>
 </html>
