--- a/notes.html
+++ b/notes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes</title>
+    <title>Your Notes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,6 +22,8 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Your custom JS for note management -->
+    
+    <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script> <!-- Pocket Bird -->
 </body>
 </html>
