--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Audio Player for Wii Music -->
+    <audio id="wiiMusic" autoplay loop>
+        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+
     <div class="container">
         <h1>Game Links</h1>
 
@@ -43,7 +49,7 @@
             <a href="notes.html">Go to Notes Page</a>
         </div>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script> <!-- Pocket Bird -->
 </body>
 </html>
