--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <!-- Audio Player for Wii Music -->
-    <audio id="wiiMusic" autoplay loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
+    <div id="audioPlayer">
+        <audio id="wiiMusic" autoplay loop>
+            <!-- Replace with the actual Wii music URL or use a valid MP3 link -->
+            <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
 
     <div class="container">
         <h1>Game Links</h1>
