--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     .game-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 30px;
+      gap: 10px; /* Set gap between the boxes to 10px */
       margin: 40px 20px;
       justify-items: center;
     }
@@ -98,42 +98,3 @@
     <div class="game-card" onclick="window.open('https://veck.io/', '_blank')">
       <h3>Veck</h3>
     </div>
-
-    <!-- Neal.fun -->
-    <div class="game-card" onclick="window.open('https://neal.fun/', '_blank')">
-      <h3>Neal.fun</h3>
-    </div>
-
-    <!-- Eaglercraft -->
-    <div class="game-card" onclick="window.open('https://eaglercraft.q13x.com/1.8.8/js/?retina=true', '_blank')">
-      <h3>Eaglercraft</h3>
-    </div>
-
-    <!-- Slow Roads -->
-    <div class="game-card" onclick="window.open('https://slowroads.io/', '_blank')">
-      <h3>Slow Roads</h3>
-    </div>
-
-    <!-- Game Snacks -->
-    <div class="game-card" onclick="window.open('https://gamesnacks.com/', '_blank')">
-      <h3>Game Snacks</h3>
-    </div>
-
-    <!-- Polytrack -->
-    <div class="game-card" onclick="window.open('https://www.kodub.com/apps/polytrack', '_blank')">
-      <h3>Polytrack</h3>
-    </div>
-
-    <!-- Cat Mario -->
-    <div class="game-card" onclick="window.open('https://catmario.eu/', '_blank')">
-      <h3>Cat Mario</h3>
-    </div>
-
-  </div>
-
-  <footer>
-    <p>&copy; 2026 Game Gallery | All Rights Reserved</p>
-  </footer>
-
-</body>
-</html>
