--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     /* Body and general page styling */
     body {
       font-family: 'Arial', sans-serif;
-      background: #f7f7f7; /* Light background */
-      color: #333;
+      background: #121212; /* Dark background */
+      color: #fff;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
@@ -17,7 +17,7 @@
 
     /* Header */
     header {
-      background-color: #2d3e50;
+      background-color: #1e1e1e;
       color: #fff;
       text-align: center;
       padding: 20px;
@@ -29,16 +29,16 @@
     .game-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 10px; /* Set gap between the boxes to 10px */
+      gap: 20px; /* Increased gap between the boxes to 20px */
       margin: 40px 20px;
       justify-items: center;
     }
 
     /* Styling individual game cards */
     .game-card {
-      background-color: white;
+      background-color: #2c2c2c; /* Dark background for cards */
       border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
       overflow: hidden;
       transition: transform 0.3s ease;
       width: 300px;  /* Increased width for bigger boxes */
@@ -59,13 +59,13 @@
     .game-card h3 {
       font-size: 1.8em;
       margin: 0;
-      color: #2d3e50;
+      color: #fff; /* White text color */
     }
 
     /* Footer styling */
     footer {
-      background-color: #2d3e50;
-      color: white;
+      background-color: #1e1e1e;
+      color: #fff;
       text-align: center;
       padding: 15px;
       font-size: 0.9em;
@@ -73,7 +73,7 @@
 
     /* Background styling */
     .background {
-      background: linear-gradient(135deg, #f7f7f7, #e2e2e2);
+      background: linear-gradient(135deg, #121212, #1e1e1e);
       position: absolute;
       top: 0;
       left: 0;
