--- a/index.html
+++ b/index.html
@@ -81,8 +81,20 @@
       bottom: 0;
       z-index: -1;
     }
+
+    /* Pocket Bird placeholder styling */
+    #pocket-bird-game {
+      width: 100%;
+      height: 300px;  /* Set height for the Pocket Bird game */
+      background-color: #2c2c2c;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
+    }
   </style>
 
+  <!-- Pocket Bird Script -->
+  <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script>
+  
 </head>
 <body>
 
@@ -128,7 +140,15 @@
       <h3>Cat Mario</h3>
     </div>
 
+    <!-- Pocket Bird -->
+    <div class="game-card" onclick="document.getElementById('pocket-bird-game').innerHTML = ''">
+      <h3>Pocket Bird</h3>
+    </div>
+
   </div>
+
+  <!-- Pocket Bird Embed -->
+  <div id="pocket-bird-game" onclick="birbEmbed('#pocket-bird-game')"></div>
 
   <footer>
     <p>&copy; 2026 Game Gallery | All Rights Reserved</p>
