--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     .game-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 20px; /* Increased gap between the boxes to 20px */
+      gap: 30px; /* Increased gap between the boxes to 30px */
       margin: 40px 20px;
       justify-items: center;
     }
 
     /* Styling individual game cards */
     .game-card {
-      background-color: #2c2c2c; /* Dark background for cards */
+      background-color: #333; /* Gray background for cards */
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
       overflow: hidden;
@@ -86,7 +86,7 @@
     #pocket-bird-game {
       width: 100%;
       height: 300px;  /* Set height for the Pocket Bird game */
-      background-color: #2c2c2c;
+      background-color: #333; /* Match gray color */
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
     }
