--- a/index.html
+++ b/index.html
@@ -140,10 +140,6 @@
       <h3>Cat Mario</h3>
     </div>
 
-    <!-- Pocket Bird -->
-    <div class="game-card" onclick="document.getElementById('pocket-bird-game').innerHTML = ''">
-      <h3>Pocket Bird</h3>
-    </div>
 
   </div>
 
@@ -151,8 +147,11 @@
   <div id="pocket-bird-game" onclick="birbEmbed('#pocket-bird-game')"></div>
 
   <footer>
-    <p>&copy; 2026 Game Gallery | All Rights Reserved</p>
+    <p>&copy; 2026 soups Gallery | All Rights Reserved</p>
   </footer>
 
 </body>
 </html>
+<footer>
+    <p>&copy; i like soup</p>
+  </footer>
