--- a/index.html
+++ b/index.html
@@ -150,6 +150,11 @@
     <p>&copy; 2026 soups Gallery | All Rights Reserved</p>
   </footer>
 
+<audio controls>
+  <source src="wii-music-gaming-background-music-made-with-Voicemod.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>   
+  
 </body>
 </html>
 <footer>
