--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
     <p>&copy; 2026 soups Gallery | All Rights Reserved</p>
   </footer>
 
-  <source src="wii-music-gaming-background-music-made-with-Voicemod.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>   
+<audio autoplay loop>
+	<source src="wii-music-gaming-background-music-made-with-Voicemod.mp3" type="audio/ogg">
+	<source src="wii-music-gaming-background-music-made-with-Voicemod.mp3" type="audio/mpeg">
+</audio>
   
 </body>
 </html>
