--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
   </footer>
 
 <audio autoplay loop>
-	<source src="wii-music-gaming-background-music-made-with-Voicemod.mp3" type="audio/ogg">
-	<source src="wii-music-gaming-background-music-made-with-Voicemod.mp3" type="audio/mpeg">
+	<source src="Wii music.mp3" type="audio/ogg">
+	<source src="Wii music.mp3" type="audio/mpeg">
 </audio>
   
 </body>
