--- a/index.html
+++ b/index.html
@@ -82,19 +82,11 @@
       z-index: -1;
     }
 
-    /* Pocket Bird placeholder styling */
-    #pocket-bird-game {
-      width: 100%;
-      height: 300px;  /* Set height for the Pocket Bird game */
-      background-color: #333; /* Match gray color */
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
-    }
   </style>
 
   <!-- Pocket Bird Script -->
   <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script>
-  
+
 </head>
 <body>
 
@@ -140,23 +132,16 @@
       <h3>Cat Mario</h3>
     </div>
 
+    <!-- OneNote -->
+    <div class="game-card" onclick="window.location.href='onenote.html'">
+      <h3>OneNote</h3>
+    </div>
 
   </div>
 
-  <!-- Pocket Bird Embed -->
-  <div id="pocket-bird-game" onclick="birbEmbed('#pocket-bird-game')"></div>
-
   <footer>
-    <p>&copy; 2026 soups Gallery | All Rights Reserved</p>
+    <p>&copy; 2026 Game Gallery | All Rights Reserved</p>
   </footer>
 
-<audio autoplay loop>
-	<source src="Wii music.mp3" type="audio/ogg">
-	<source src="Wii music.mp3" type="audio/mpeg">
-</audio>
-  
 </body>
 </html>
-<footer>
-    <p>&copy; i like soup</p>
-  </footer>
